--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -233,7 +233,7 @@ section {
 	.right-about {
 		display: grid;
 		grid-template-columns: repeat(2, 1fr);
-		grid-gap: 2rem;
+		gap: 2rem;
 		.about-item {
 			border: 1px solid var(--color-grey-5);
 			border-radius: 5px;
@@ -294,7 +294,7 @@ section {
 	.progress-bars {
 		display: grid;
 		grid-template-columns: repeat(2, 1fr);
-		grid-gap: 2rem;
+		gap: 2rem;
 		.progress-bar {
 			display: flex;
 			flex-direction: column;
@@ -368,7 +368,7 @@ section {
 .timeline {
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
-	grid-gap: 2rem;
+	gap: 2rem;
 	padding-bottom: 3rem;
 	.timeline-item {
 		position: relative;
@@ -417,13 +417,13 @@ section {
 
 // PORTFOLIO SECTION
 .port-text {
-	padding: 2rem 0;
+	padding: 6rem 0 1rem;
 	text-align: center;
 }
 .portfolios {
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
-	grid-gap: 2rem;
+	gap: 2rem;
 	margin-top: 3rem;
 	.portfolio-item {
 		position: relative;
@@ -494,7 +494,7 @@ section {
 .blogs {
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
-	grid-gap: 2rem;
+	gap: 2rem;
 	margin-top: 3rem;
 	.blog {
 		display: flex;
@@ -706,6 +706,8 @@ section {
 // Pincipals Titles
 .main-title {
 	text-align: center;
+  display: flex;
+  justify-content: center;
 	h2 {
 		position: relative;
 		text-transform: uppercase;
@@ -723,7 +725,7 @@ section {
 			z-index: -1;
 			transform: translate(-50%, -50%);
 			font-weight: 800;
-			font-size: 6.3rem;
+			font-size: 4.3rem;
 		}
 	}
 }
